--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@
     margin-bottom: 2rem;
 }
 
+#status {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+}
+
 /* --- ESTILOS DEL BOTÓN DE SUBIR FOTOS --- */
 /* Oculta el input original */
 input[type="file"] {
